# pySigma-backend-openobserve

./: .gitignore  .pre-commit-config.yaml  README.md  SECURITY.md  print-coverage.py  pyproject.toml  requirements-build.txt  requirements-guarddog-ignore.txt
.github/: CONTRIBUTING.md
.github/workflows/: guarddog.yml  ossf-scorecard.yml  osv-scanner.yml  precommit.yml  python-publish-pypi.yml  python-publish-testpypi.yml  release.yml  test.yml  urlchecker.yml
docs/: INVALID.md  rules-conversion.ipynb
sigma/backends/openobserve/: openobserve.py
sigma/pipelines/openobserve/: kunai.py  kunai.yml
tests/: test_backend_openobserve.py  test_backend_openobserve_kunai.py
