[project]
name = "pySigma-backend-openobserve"
version = "0.1.0"
description = "pySigma openobserve backend"
readme = "README.md"
authors = [
    { name = "juju4" }
]
license = "LGPL-3.0-only"

[tool.poetry]
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.10"
pysigma = "^1.0.0"
python_openobserve = "^0.4.1"

[tool.poetry.group.dev.dependencies]
black = "26.1.0"
pytest = "9.0.2"
pytest-cov = "7.0.0"
coverage = "7.13.3"


[tool.pdm]
[tool.pdm.dev-dependencies]
dev = []

[tool.pdm.build]
includes = ["sigma"]
[build-system]
requires = ["poetry-core>=1.8.1"]
build-backend = "poetry.core.masonry.api"

[project.urls]
Repository = "https://github.com/juju4/pySigma-backend-openobserve"

[project.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^4.1"
coverage = "^7.4"
